--- a/breakeven.html
+++ b/breakeven.html
@@ -277,7 +277,7 @@
         </div>
     </div>
 
-    <main id="main-content">
+    <main id="main-content" data-no-tips>
         <nav class="breadcrumb">
             <a href="/">Home</a> → <a href="/tools.html">Tools</a> → Break-Even Calculator
         </nav>
