--- a/breakeven.html
+++ b/breakeven.html
@@ -44,6 +44,10 @@
     }
     </script>
     <style>
+        /* Global overflow prevention */
+        html, body { overflow-x: hidden; width: 100%; }
+        main, .panel, .panel-body { max-width: 100%; overflow-x: hidden; }
+
         /* Prevent number spinners */
         input[type="number"]::-webkit-inner-spin-button,
         input[type="number"]::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; }
@@ -256,8 +260,15 @@
             }
             .sens-table { font-size: 0.65rem; }
             .sens-table th, .sens-table td { padding: 4px 5px; }
-            .hint-popup { position: fixed; top: auto; bottom: 0; left: 0; right: 0; border-radius: 12px 12px 0 0; z-index: 200; max-height: 50vh; overflow-y: auto; }
+            /* On mobile: no focus popups (keyboard covers them). Tap ? icon to toggle instead via JS. */
+            .input-wrap:focus-within .hint-popup { display: none !important; }
+            .hint-popup { position: fixed; bottom: 0; left: 0; right: 0; top: auto;
+                border-radius: 14px 14px 0 0; z-index: 9999; max-height: 45vh; overflow-y: auto;
+                padding: 20px 18px calc(env(safe-area-inset-bottom, 0px) + 20px);
+                background: #16161a; border: 1px solid var(--accent); border-bottom: none;
+                box-shadow: 0 -8px 30px rgba(0,0,0,0.7); pointer-events: auto; }
             .hint-popup::after { display: none; }
+            .hint-popup.mobile-open { display: block !important; }
         }
     </style>
 </head>
@@ -310,7 +321,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Expected Yield (bu/ac) <span class="hint-icon">?</span></label>
-                                <input type="number" id="yield" value="180" oninput="calcBreakeven()">
+                                <input type="number" id="yield" value="180" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">⚡ Yield Checklist</div>
                                     <ul class="hint-list">
@@ -327,7 +338,7 @@
                         
                         <div class="input-wrap">
                             <label style="font-size: 0.75rem;">Market Price ($/bu) <span class="hint-icon">?</span></label>
-                            <input type="number" id="price" value="4.50" step="0.01" oninput="calcBreakeven()">
+                            <input type="number" id="price" value="4.50" step="0.01" inputmode="decimal" oninput="calcBreakeven()">
                             <div class="hint-popup" inert>
                                 <div class="hint-title">💲 Price Considerations</div>
                                 <ul class="hint-list">
@@ -348,7 +359,7 @@
                         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Seed <span class="hint-icon">?</span></label>
-                                <input type="number" id="seed" value="125" oninput="calcBreakeven()">
+                                <input type="number" id="seed" value="125" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">🌱 Don't Forget</div>
                                     <ul class="hint-list">
@@ -362,7 +373,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Fertilizer <span class="hint-icon">?</span></label>
-                                <input type="number" id="fertilizer" value="175" oninput="calcBreakeven()">
+                                <input type="number" id="fertilizer" value="175" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">🧪 Don't Forget</div>
                                     <ul class="hint-list">
@@ -378,7 +389,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Chemicals <span class="hint-icon">?</span></label>
-                                <input type="number" id="chemicals" value="65" oninput="calcBreakeven()">
+                                <input type="number" id="chemicals" value="65" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">🧴 Don't Forget</div>
                                     <ul class="hint-list">
@@ -393,7 +404,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Crop Insurance <span class="hint-icon">?</span></label>
-                                <input type="number" id="insurance" value="35" oninput="calcBreakeven()">
+                                <input type="number" id="insurance" value="35" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">🛡️ Don't Forget</div>
                                     <ul class="hint-list">
@@ -415,7 +426,7 @@
                         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Machinery <span class="hint-icon">?</span></label>
-                                <input type="number" id="machinery" value="85" oninput="calcBreakeven()">
+                                <input type="number" id="machinery" value="85" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">🚜 Don't Forget</div>
                                     <ul class="hint-list">
@@ -430,7 +441,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Labor <span class="hint-icon">?</span></label>
-                                <input type="number" id="labor" value="35" oninput="calcBreakeven()">
+                                <input type="number" id="labor" value="35" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">👷 Don't Forget</div>
                                     <ul class="hint-list">
@@ -444,7 +455,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Land Rent/Cost <span class="hint-icon">?</span></label>
-                                <input type="number" id="land" value="250" oninput="calcBreakeven()">
+                                <input type="number" id="land" value="250" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">🏡 Don't Forget</div>
                                     <ul class="hint-list">
@@ -459,7 +470,7 @@
                             </div>
                             <div class="input-wrap">
                                 <label style="font-size: 0.75rem;">Overhead <span class="hint-icon">?</span></label>
-                                <input type="number" id="overhead" value="38" oninput="calcBreakeven()">
+                                <input type="number" id="overhead" value="38" inputmode="numeric" oninput="calcBreakeven()">
                                 <div class="hint-popup" inert>
                                     <div class="hint-title">📋 Don't Forget</div>
                                     <ul class="hint-list">
@@ -480,7 +491,7 @@
                     <div class="cost-breakdown">
                         <div class="cost-breakdown-title">Cost Breakdown</div>
                         <div class="cost-bar" id="cost-bar"></div>
-                        <div class="cost-legend" id="cost-legend"></div>
+                        <div class="cost-legend" id="cost-legend" style="overflow-x:auto;-webkit-overflow-scrolling:touch;"></div>
                     </div>
                 </div>
             </div>
@@ -523,7 +534,7 @@
                         <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;">
                             <div style="display:flex;align-items:center;gap:8px;">
                                 <label class="acres-label" style="font-size:0.7rem;color:var(--dim);text-transform:uppercase;letter-spacing:0.5px;margin:0;white-space:nowrap;">Total Acres</label>
-                                <input type="number" id="acres" value="500" oninput="calcBreakeven()" style="width:80px;padding:4px 8px;font-size:0.85rem;background:var(--card);border:1px solid var(--border);border-radius:4px;color:var(--text);font-family:inherit;">
+                                <input type="number" id="acres" value="500" inputmode="numeric" oninput="calcBreakeven()" style="width:80px;padding:4px 8px;font-size:0.85rem;background:var(--card);border:1px solid var(--border);border-radius:4px;color:var(--text);font-family:inherit;">
                             </div>
                             <div style="text-align:right;">
                                 <div style="font-size:0.65rem;color:var(--dim);text-transform:uppercase;letter-spacing:0.5px;">Farm Total Profit/Loss</div>
@@ -547,7 +558,7 @@
                     <!-- Sensitivity Table -->
                     <div class="sensitivity">
                         <div class="sensitivity-title">What-If: Profit/Loss per Acre</div>
-                        <table class="sens-table" id="sens-table"></table>
+                        <div style="overflow-x:auto;-webkit-overflow-scrolling:touch;margin:0 -4px;padding:0 4px;"><table class="sens-table" id="sens-table"></table></div>
                     </div>
 
                     <!-- Action buttons -->
@@ -817,6 +828,51 @@
        ========================================== */
     calcBreakeven();
     fetchLivePrices();
+
+    /* Mobile: tap ? icon to toggle hint as bottom sheet */
+    (function() {
+        if (window.innerWidth > 500) return;
+        var activePopup = null;
+
+        document.querySelectorAll('.hint-icon').forEach(function(icon) {
+            icon.addEventListener('click', function(e) {
+                e.preventDefault();
+                e.stopPropagation();
+                var popup = icon.closest('.input-wrap').querySelector('.hint-popup');
+                if (!popup) return;
+
+                // Close previous
+                if (activePopup && activePopup !== popup) {
+                    activePopup.classList.remove('mobile-open');
+                }
+
+                if (popup.classList.contains('mobile-open')) {
+                    popup.classList.remove('mobile-open');
+                    activePopup = null;
+                } else {
+                    popup.classList.add('mobile-open');
+                    activePopup = popup;
+                }
+            });
+        });
+
+        // Tap outside to close
+        document.addEventListener('click', function(e) {
+            if (activePopup && !e.target.closest('.hint-icon') && !e.target.closest('.hint-popup')) {
+                activePopup.classList.remove('mobile-open');
+                activePopup = null;
+            }
+        });
+
+        // Scroll input into view on focus (above keyboard)
+        document.querySelectorAll('input[type="number"], select').forEach(function(input) {
+            input.addEventListener('focus', function() {
+                setTimeout(function() {
+                    input.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                }, 300);
+            });
+        });
+    })();
     </script>
 </body>
 </html>
